--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/candylan/public_html/
+    - export DEPLOYPATH=/home/candylan/meckleyspartsandservice.com/
     - /bin/cp -R * $DEPLOYPATH
